-Group Reservations 3-can't select same dependent guest 4-after individual check out for a guest the oom still as not checked out and adding a guest to the same room doesn't require a relation ship